--- a/templates/base.html
+++ b/templates/base.html
@@ -11,13 +11,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/usuarios">Usuário</a>
+                    <a href="/editora">Editora</a>
                 </li>
                 <li>
-                    <a href="/pizzas">Pizzas</a>
-                </li>
-                <li>
-                    <a href="/pedidos">Pedidos</a>
+                    <a href="/revista">Revista</a>
                 </li>
             </ul>
         </nav>
