--- a/modulos/editora/templates/editora.html
+++ b/modulos/editora/templates/editora.html
@@ -10,19 +10,17 @@
         {% endfor %}
     {% endif %}
     <div>
-        <a href="/usuarios/add">Adicionar</a>
+        <a href="/editora/add">Adicionar</a>
     </div>
     <table>
         <tr>
             <th>Nome</th>
-            <th>Email</th>
-            <th>Senha</th>
+            <th>Cidade</th>
         </tr>
-        {% for u in dados %}
+        {% for E in dados %}
         <tr>
             <td>{{u.nome}}</td>
-            <td>{{u.email}}</td>
-            <td>{{u.senha}}</td>
+            <td>{{u.cidade}}</td>
         </tr>
         {% endfor %}
     </table>
