--- a/modulos/editora/templates/editora_add.html
+++ b/modulos/editora/templates/editora_add.html
@@ -9,18 +9,14 @@
             </div>
         {% endfor %}
     {% endif %}
-    <form action="/usuarios/save" method="post">
+    <form action="/editora/save" method="post">
         <div>
             <label for="nome">Nome: </label>
             <input type="text" name="nome" id="nome">
         </div>
         <div>
-            <label for="email">Email: </label>
-            <input type="email" name="email" id="email">
-        </div>
-        <div>
-            <label for="senha">Senha: </label>
-            <input type="password" name="senha" id="senha">
+            <label for="cidade">Cidade: </label>
+            <input type="text" name="cidade" id="cidade">
         </div>
         <button type="submit">Salvar</button>
     </form>
