--- a/modulos/editora/templates/editora.html
+++ b/modulos/editora/templates/editora.html
@@ -17,10 +17,10 @@
             <th>Nome</th>
             <th>Cidade</th>
         </tr>
-        {% for E in dados %}
+        {% for e in dados %}
         <tr>
-            <td>{{u.nome}}</td>
-            <td>{{u.cidade}}</td>
+            <td>{{e.nome}}</td>
+            <td>{{e.cidade}}</td>
         </tr>
         {% endfor %}
     </table>
